--- a/Evo3/app/src/main/res/layout/activity_main.xml
+++ b/Evo3/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#22131ef1">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -18,7 +19,8 @@
             android:id="@+id/imageButton"
             android:layout_gravity="center_horizontal|top"
             android:adjustViewBounds="false"
-            android:background="@drawable/cyanobacteria" />
+            android:background="@drawable/cyanobacteria"
+            android:layout_marginTop="15dp" />
 
         <ImageButton
             android:layout_width="90dp"
@@ -53,10 +55,11 @@
                 android:layout_width="208dp"
                 android:layout_height="53dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Cyanoacteria"
+                android:text="Cyanobacteria"
                 android:id="@+id/textView"
                 android:layout_gravity="center_horizontal|top"
-                android:gravity="top|center_horizontal" />
+                android:gravity="top|center_horizontal"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:layout_width="98dp"
@@ -96,9 +99,62 @@
                 android:id="@+id/button"
                 android:layout_gravity="right|top"
                 android:textSize="@dimen/abc_action_bar_content_inset_material"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_marginTop="15dp" />
 
         </FrameLayout>
 
     </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="117dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="DNA: 200"
+            android:id="@+id/textView5"
+            android:layout_gravity="left|top"
+            android:gravity="top|left"
+            android:layout_marginLeft="5dp" />
+
+        <TextView
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="DNA: -2"
+            android:id="@+id/textView6"
+            android:layout_gravity="left|bottom"
+            android:gravity="top|center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="110dp" />
+
+        <TextView
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="DNA: -2"
+            android:id="@+id/textView7"
+            android:layout_gravity="center_horizontal|bottom"
+            android:gravity="top|center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="110dp" />
+
+        <TextView
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="DNA: -2"
+            android:id="@+id/textView8"
+            android:layout_gravity="right|bottom"
+            android:gravity="top|center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="110dp" />
+    </FrameLayout>
+
 </RelativeLayout>
