--- a/Evo3/app/src/main/res/layout/activity_main.xml
+++ b/Evo3/app/src/main/res/layout/activity_main.xml
@@ -6,161 +6,196 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#22131ef1">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <ImageButton
-            android:layout_width="344dp"
-            android:layout_height="288dp"
-            android:id="@+id/imageButton"
-            android:layout_gravity="center_horizontal|top"
-            android:src="@drawable/cyanobacteria"
-            android:scaleType="fitXY"
-            android:layout_marginTop="17dp" />
-
-        <ImageButton
-            android:layout_width="90dp"
-            android:layout_height="75dp"
-            android:id="@+id/imageButton2"
-            android:layout_gravity="left|bottom"
-            android:onClick="Generation2"
-            android:scaleType="fitXY"
-            android:src="@drawable/euglena" />
-
-        <ImageButton
-            android:layout_width="90dp"
-            android:layout_height="75dp"
-            android:id="@+id/imageButton3"
-            android:layout_gravity="center_horizontal|bottom"
-            android:onClick="Generation3"
-            android:scaleType="fitXY"
-            android:src="@drawable/amoeba" />
-
-        <ImageButton
-            android:layout_width="90dp"
-            android:layout_height="75dp"
-            android:id="@+id/imageButton4"
-            android:layout_gravity="right|bottom"
-            android:onClick="Generation4"
-            android:scaleType="fitXY"
-            android:src="@drawable/tintinnids" />
-
-        <FrameLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="191dp"
-            android:layout_gravity="left|bottom">
-
-            <TextView
-                android:layout_width="208dp"
-                android:layout_height="53dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Cyanobacteria"
-                android:id="@+id/textView"
-                android:layout_gravity="center_horizontal|top"
-                android:gravity="top|center_horizontal"
-                android:layout_marginTop="15dp" />
-
-            <TextView
-                android:layout_width="98dp"
-                android:layout_height="39dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Euglena"
-                android:id="@+id/textView2"
-                android:layout_gravity="left|center_vertical"
-                android:gravity="bottom|center_horizontal"
-                android:textSize="@dimen/abc_action_bar_content_inset_material" />
-
-            <TextView
-                android:layout_width="104dp"
-                android:layout_height="39dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Amoeba"
-                android:id="@+id/textView3"
-                android:layout_gravity="center"
-                android:gravity="bottom|center_horizontal"
-                android:textSize="@dimen/abc_action_bar_content_inset_material" />
-
-            <TextView
-                android:layout_width="95dp"
-                android:layout_height="39dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Tintinnids"
-                android:id="@+id/textView4"
-                android:layout_gravity="right|center_vertical"
-                android:gravity="bottom|center_horizontal"
-                android:textSize="@dimen/abc_action_bar_content_inset_material" />
-
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Reset"
-                android:id="@+id/button"
-                android:layout_gravity="right|top"
-                android:textSize="@dimen/notification_subtext_size"
-                android:gravity="center"
-                android:onClick="ResetEvo"
-                android:layout_marginTop="15dp" />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/layout1"
-            android:layout_gravity="right|center_vertical">
-
+            android:layout_height="0dip"
+            android:layout_weight="0.04">
             <TextView
                 android:layout_width="117dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="DNA: 200"
                 android:id="@+id/textView5"
                 android:layout_gravity="left|top"
                 android:gravity="top|left"
                 android:layout_marginLeft="5dp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:layout_weight="0.55">
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imageButton"
+                android:layout_gravity="center_horizontal|top"
+                android:src="@drawable/cyanobacteria"
+                android:scaleType="fitXY"
+                android:onClick="goParty" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:layout_weight="0.12">
             <TextView
-                android:layout_width="86dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="DNA: -2"
-                android:id="@+id/textView6"
-                android:layout_gravity="left|bottom"
-                android:gravity="top|center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="110dp" />
-
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.2"/>
             <TextView
-                android:layout_width="86dp"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.6"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Cyanobacteria"
+                android:id="@+id/textView"
+                android:layout_gravity="center_horizontal|top"
+                android:gravity="top|center_horizontal" />
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="0dip"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="DNA: -2"
-                android:id="@+id/textView7"
-                android:layout_gravity="center_horizontal|bottom"
-                android:gravity="top|center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="110dp" />
+                android:layout_weight="0.2"
+                android:text="Reset"
+                android:id="@+id/button"
+                android:layout_gravity="right|top"
+                android:textSize="@dimen/notification_subtext_size"
+                android:gravity="center"
+                android:onClick="ResetEvo" />
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="86dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="DNA: -2"
-                android:id="@+id/textView8"
-                android:layout_gravity="right|bottom"
-                android:gravity="top|center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="110dp" />
-        </FrameLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_height="0dip"
+            android:layout_width="match_parent"
+            android:layout_weight="0.30">
 
-    </FrameLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.333">
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.1"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="DNA: -2"
+                    android:id="@+id/textView6"
+                    android:layout_gravity="left|bottom"
+                    android:gravity="top|center"
+                    android:layout_marginLeft="5dp" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.2"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Euglena"
+                    android:id="@+id/textView2"
+                    android:layout_gravity="left|center_vertical"
+                    android:gravity="bottom|center_horizontal"
+                    android:textSize="@dimen/abc_action_bar_content_inset_material"
+                    android:layout_marginTop="4dp" />
+                <ImageButton
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.7"
+                    android:id="@+id/imageButton2"
+                    android:layout_gravity="left|bottom"
+                    android:onClick="Generation2"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/euglena" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.334">
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.1"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="DNA: -2"
+                    android:id="@+id/textView7"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:gravity="top|center"
+                    android:layout_marginLeft="5dp" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.2"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Amoeba"
+                    android:id="@+id/textView3"
+                    android:layout_gravity="center"
+                    android:gravity="bottom|center_horizontal"
+                    android:textSize="@dimen/abc_action_bar_content_inset_material"
+                    android:layout_marginTop="4dp" />
+                <ImageButton
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.7"
+                    android:id="@+id/imageButton3"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:onClick="Generation3"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/amoeba" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.333">
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.1"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="DNA: -2"
+                    android:id="@+id/textView8"
+                    android:layout_gravity="right|bottom"
+                    android:gravity="top|center"
+                    android:layout_marginLeft="5dp" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.2"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Tintinnids"
+                    android:id="@+id/textView4"
+                    android:layout_gravity="right|center_vertical"
+                    android:gravity="bottom|center_horizontal"
+                    android:textSize="@dimen/abc_action_bar_content_inset_material"
+                    android:layout_marginTop="4dp" />
+                <ImageButton
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dip"
+                    android:layout_weight="0.7"
+                    android:id="@+id/imageButton4"
+                    android:layout_gravity="right|bottom"
+                    android:onClick="Generation4"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/tintinnids" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
