--- a/Evo3/app/src/main/res/layout/activity_main_activity2.xml
+++ b/Evo3/app/src/main/res/layout/activity_main_activity2.xml
@@ -54,7 +54,7 @@
         <TextView android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:orientation="horizontal"
-            android:layout_weight="0.04"/>
+            android:layout_weight="0.03"/>
 
         <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent"
@@ -321,12 +321,12 @@
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:orientation="horizontal"
-            android:layout_weight="0.02"/>
+            android:layout_weight="0.015"/>
 
         <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
-            android:layout_weight="0.25"
+            android:layout_weight="0.265"
             android:id="@+id/LL6"
             android:background="#c4a3bdf0">
 
@@ -349,7 +349,7 @@
             <LinearLayout android:orientation="vertical"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight="0.37">
+                android:layout_weight="0.38">
 
                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="fill_parent"
@@ -379,7 +379,8 @@
                     android:text="Attack/Defense Size/Diet LiveEnvironment"
                     android:id="@+id/textView21"
                         android:layout_marginTop="3dp"
-                        android:layout_marginLeft="2dp" />
+                        android:layout_marginLeft="2dp"
+                        android:textSize="11dp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -387,7 +388,7 @@
             <LinearLayout android:orientation="vertical"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:layout_weight="0.25">
+                android:layout_weight="0.24">
 
                 <LinearLayout android:orientation="horizontal"
                     android:layout_width="fill_parent"
@@ -402,7 +403,8 @@
                     android:id="@+id/button12"
                     android:layout_gravity="right|top"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginBottom="10dp"
+                    android:textSize="13dp" />
                 </LinearLayout>
 
                 <LinearLayout android:orientation="horizontal"
@@ -418,7 +420,8 @@
                     android:id="@+id/button13"
                     android:layout_gravity="right|bottom"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginBottom="10dp"
+                    android:textSize="13dp" />
                 </LinearLayout>
 
             </LinearLayout>
